--- a/index.html
+++ b/index.html
@@ -24,26 +24,66 @@
         <nav class="menu">
           <ul class="menu__list">
             <li class="list__item">
-              <a class="list__link" href="#">Главная</a>
+              <a class="list__link" href="#" data-scroll=".home">Главная</a>
             </li>
             <li class="list__item">
-              <a class="list__link" href="#">Направления</a>
+              <a class="list__link" href="#" data-scroll=".destinations">Направления</a>
             </li>
             <li class="list__item">
-              <a class="list__link" href="#">Приложение</a>
+              <a class="list__link" href="#" data-scroll=".app">Приложение</a>
             </li>
             <li class="list__item">
-              <a class="list__link" href="#">Отзывы</a>
+              <a class="list__link" href="#" data-scroll=".testimonials">Отзывы</a>
             </li>
             <li class="list__item">
-              <a class="list__link" href="#">Истории</a>
+              <a class="list__link" href="#" data-scroll=".article">Истории</a>
             </li>
           </ul>
         </nav>
         <div class="header__buttons">
           <button class="header__btn--left btn" type="button">Войти</button>
           <button class="header__btn--right btn" type="button">Регистрация</button>
+
+          <!-- Pop-up -->
+          <div class="popup">
+            <h2 class="popup__title title">Войдите в систему</h2>
+            <form class="form__popup">
+              <input class="popup__text" type="text" placeholder="Электронная почта">
+              <input class="popup__password" type="password" placeholder="Пароль">
+              <button class="popup__btn btn" type="submit">Войти</button>
+            </form>
+            <button class="exit"></button>
+          </div>
         </div>
+
+        <!-- Burger menu -->
+        <div class="burger__button-wrapper">
+          <div class="burger__button"></div>
+        </div>
+
+        <!-- Mobile navigation -->
+        <nav class="menu__mobile-nav">
+          <a class="mobile__logo" href="#">
+            <img class="mobile__logo-img" src="images/logo.svg" alt="Логотип сайта">
+          </a>
+          <ul class="mobile-nav__list">
+            <li class="mobile-nav__item">
+              <a class="mobile-nav__link" href="#" data-scroll=".home">Главная</a>
+            </li>
+            <li class="mobile-nav__item">
+              <a class="mobile-nav__link" href="#" data-scroll=".destinations">Направления</a>
+            </li>
+            <li class="mobile-nav__item">
+              <a class="mobile-nav__link" href="#" data-scroll=".app">Приложение</a>
+            </li>
+            <li class="mobile-nav__item">
+              <a class="mobile-nav__link" href="#" data-scroll=".testimonials">Отзывы</a>
+            </li>
+            <li class="mobile-nav__item">
+              <a class="mobile-nav__link" href="#" data-scroll=".article">Истории</a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </div>
   </header>
@@ -59,16 +99,55 @@
           <form class="home__form">
             <div class="form__wrapper">
               <div class="input__wrapper">
-                <input class="form__input" type="text" value="Расположение">
+                <select class="form__select">
+                  <option>Расположение</option>
+                  <option>Украина</option>
+                  <option>Россия</option>
+                  <option>Беларусь</option>
+                  <option>Польша</option>
+                  <option>Венгрия</option>
+                  <option>Латвия</option>
+                  <option>Румыния</option>
+                  <option>Чехия</option>
+                  <option>Австрия</option>
+                  <option>Германия</option>
+                </select>
               </div>
               <div class="input__wrapper">
-                <input class="form__input" type="text" value="Активность">
+                <select class="form__select">
+                  <option>Активность</option>
+                  <option>Экскурсионный тур</option>
+                  <option>Пляжный отдых</option>
+                  <option>Оздоровление и SPA</option>
+                  <option>Горнолыжный тур</option>
+                  <option>Свадебный тур</option>
+                  <option>Морской круиз</option>
+                  <option>Новогодний тур</option>
+                </select>
               </div>
               <div class="input__wrapper">
-                <input class="form__input" type="text" value="Оценка">
+                <select class="form__select">
+                  <option>Оценка</option>
+                  <option>Одна звезда</option>
+                  <option>Две звезды</option>
+                  <option>Три звезды</option>
+                  <option>Четыре звезды</option>
+                  <option>Пять звезд</option>
+                </select>
               </div>
               <div class="input__wrapper">
-                <input class="form__input" type="text" value="Дата">
+                <select class="form__select">
+                  <option>Даты</option>
+                  <option>1.10 – 8.10</option>
+                  <option>2.10 – 9.10</option>
+                  <option>3.10 – 10.10</option>
+                  <option>4.10 – 11.10</option>
+                  <option>5.10 – 12.10</option>
+                  <option>6.10 – 13.10</option>
+                  <option>7.10 – 14.10</option>
+                  <option>8.10 – 15.10</option>
+                  <option>9.10 – 16.10</option>
+                </select>
               </div>
             </div>
             <button class="form__btn btn" type="submit">Исследовать</button>
@@ -166,10 +245,11 @@
     <div class="container">
       <h2 class="testimonials__title title">Отзывы</h2>
       <div class="testimonials__slider">
+
         <div class="testimonials__item">
           <div class="testimonials__content">
             <h4 class="testimonials__name">Edward Newgate</h4>
-            <p class="testimonials__position">Основатель Circle</p>
+            <p class="testimonials__position">Основатель Tour&Travel</p>
             <div class="testimonials__text">
               «Наше специальное приложение для взаимодействия с пациентами и веб-портал позволяют мгновенно и
               безопасно получать доступ к информации»
@@ -179,6 +259,35 @@
             <img src="images/testimonials/1.jpg" alt="">
           </div>
         </div>
+
+        <div class="testimonials__item">
+          <div class="testimonials__content">
+            <h4 class="testimonials__name">Emma Wilson</h4>
+            <p class="testimonials__position">Cооснователь Tour&Travel</p>
+            <div class="testimonials__text">
+              «Наше специальное приложение для взаимодействия с пациентами и веб-портал позволяют мгновенно и
+              безопасно получать доступ к информации»
+            </div>
+          </div>
+          <div class="testimonials__image">
+            <img src="images/testimonials/2.jpg" alt="">
+          </div>
+        </div>
+
+        <div class="testimonials__item">
+          <div class="testimonials__content">
+            <h4 class="testimonials__name">Olivia Hill</h4>
+            <p class="testimonials__position">HR Tour&Travel</p>
+            <div class="testimonials__text">
+              «Наше специальное приложение для взаимодействия с пациентами и веб-портал позволяют мгновенно и
+              безопасно получать доступ к информации»
+            </div>
+          </div>
+          <div class="testimonials__image">
+            <img src="images/testimonials/3.jpg" alt="">
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
@@ -316,6 +425,10 @@
     </div>
   </footer>
 
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="js/slick.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
